[gd_scene load_steps=22 format=4 uid="uid://ciky217c465t7"]

[ext_resource type="Script" uid="uid://b7rqta5v53in7" path="res://Scripts/Game Manager/Exit.gd" id="1_63j2j"]
[ext_resource type="Texture2D" uid="uid://dx43f2rvn4plc" path="res://Art/Tilemap/exit_arrow.png" id="2_l7ouy"]
[ext_resource type="Texture2D" uid="uid://dgd7d3ku8sseo" path="res://Art/Tilemap/grass.png" id="3_a6juv"]
[ext_resource type="Script" uid="uid://f4fawci4i2ae" path="res://Scripts/Visuals/floating.gd" id="3_s35pp"]
[ext_resource type="Texture2D" uid="uid://ctswc0ls4w741" path="res://Art/Tilemap/background.png" id="4_ageof"]
[ext_resource type="Script" uid="uid://dw14v8a8o7gpp" path="res://Single Assets/sir_oinksalot.gd" id="4_pm251"]
[ext_resource type="PackedScene" uid="uid://c8npjqlnwk848" path="res://Single Assets/shuriken.tscn" id="5_ageof"]
[ext_resource type="Script" uid="uid://d2gu7d1gb1efl" path="res://Scripts/Visuals/oinksalot_camera.gd" id="5_uuuni"]
[ext_resource type="Texture2D" uid="uid://4206g0m2b2la" path="res://Art/Enemies/sir_oinksalot.png" id="6_ageof"]
[ext_resource type="Script" uid="uid://blg640bp0dd2m" path="res://Scripts/Game Manager/contact_death.gd" id="8_s35pp"]
[ext_resource type="FontFile" uid="uid://coacccvk10kbs" path="res://Art/Font/Tiny5-Regular.ttf" id="10_s35pp"]
[ext_resource type="Script" uid="uid://u7ouceb4u6qa" path="res://Scripts/Game Manager/hp_bar.gd" id="11_mu778"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhqol"]
size = Vector2(15.6875, 482)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3anf8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l7ouy"]
texture = SubResource("CompressedTexture2D_3anf8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s35pp"]
texture = ExtResource("3_a6juv")
margins = Vector2i(4, 4)
separation = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
4:6/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
4:5/0 = 0
4:4/0 = 0
3:4/0 = 0
4:3/0 = 0
3:3/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:1/0 = 0
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:3/0 = 0
6:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0

[sub_resource type="TileSet" id="TileSet_pm251"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 25
sources/0 = SubResource("TileSetAtlasSource_l7ouy")
sources/1 = SubResource("TileSetAtlasSource_s35pp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu778"]
size = Vector2(83.25, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuuni"]
size = Vector2(65, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s35pp"]
bg_color = Color(0.205117, 0.205117, 0.205117, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mu778"]
bg_color = Color(0.6, 0.264, 0.264, 1)
border_width_left = 2
border_width_top = 6
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.313779, 0.220149, 0.227922, 1)

[node name="Node2D" type="Node2D"]

[node name="Exit" type="Area2D" parent="."]
position = Vector2(638, -2)
monitoring = false
script = ExtResource("1_63j2j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(-6, -254)
shape = SubResource("RectangleShape2D_fhqol")

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
position = Vector2(-71, -60)
texture = ExtResource("2_l7ouy")
script = ExtResource("3_s35pp")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(51, -43)

[node name="Background" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(156, -7)
texture = ExtResource("4_ageof")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, -130)
zoom = Vector2(3, 3)
script = ExtResource("5_uuuni")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAUAAAABAAAAAQABAAUAAAACAAAAAQABAAUAAAADAAAAAQABAAUAAAAEAAAAAQABAAUAAAAJAAAAAQABAAUAAAAKAAAAAQABAAUAAAALAAAAAQABAAUAAAAMAAAAAQABAAUAAAANAAAAAQABAAUAAAAOAAAAAQABAAUAAAAPAAAAAQABAAUAAAAAAAIAAQABAAUAAAABAAIAAQABAAUAAAARAAIAAQABAAUAAAASAAIAAQABAAUAAAAQAAIAAQABAAUAAAAPAAIAAQABAAUAAAAOAAIAAQABAAUAAAANAAIAAQABAAUAAAAMAAIAAQABAAUAAAALAAIAAQABAAUAAAAKAAIAAQABAAUAAAAJAAIAAQABAAUAAAAAAAMAAQABAAUAAAABAAMAAQABAAUAAAAJAAMAAQABAAUAAAAKAAMAAQABAAUAAAALAAMAAQABAAUAAAAMAAMAAQABAAUAAAANAAMAAQABAAUAAAAOAAMAAQABAAUAAAAPAAMAAQABAAUAAAAQAAMAAQABAAUAAAARAAMAAQABAAUAAAASAAMAAQABAAUAAAASAAQAAQABAAUAAAARAAQAAQABAAUAAAAQAAQAAQABAAUAAAAPAAQAAQABAAUAAAAOAAQAAQABAAUAAAANAAQAAQABAAUAAAAMAAQAAQABAAUAAAALAAQAAQABAAUAAAAKAAQAAQABAAUAAAAJAAQAAQABAAUAAAAGAAQAAQABAAUAAAAFAAQAAQABAAUAAAAEAAQAAQABAAUAAAADAAQAAQABAAUAAAACAAQAAQABAAUAAAABAAQAAQABAAUAAAAAAAQAAQABAAUAAAAYAAAAAQABAAUAAAAZAAAAAQABAAUAAAAaAAAAAQABAAUAAAAbAAAAAQABAAUAAAAcAAAAAQABAAUAAAAdAAAAAQABAAUAAAAeAAAAAQABAAUAAAAfAAAAAQABAAUAAAAgAAAAAQABAAUAAAAhAAAAAQABAAUAAAAiAAAAAQABAAUAAAAjAAAAAQABAAUAAAAkAAAAAQABAAUAAAATAAIAAQABAAUAAAATAAMAAQABAAUAAAATAAQAAQABAAUAAAAUAAIAAQABAAUAAAAUAAMAAQABAAUAAAAUAAQAAQABAAUAAAAVAAEAAQABAAUAAAAVAAIAAQABAAUAAAAVAAMAAQABAAUAAAAVAAQAAQABAAUAAAAWAAEAAQABAAUAAAAWAAIAAQABAAUAAAAWAAMAAQABAAUAAAAWAAQAAQABAAUAAAAXAAEAAQABAAUAAAAXAAIAAQABAAUAAAAXAAMAAQABAAUAAAAXAAQAAQABAAUAAAAYAAEAAQABAAUAAAAYAAIAAQABAAUAAAAYAAMAAQABAAUAAAAYAAQAAQABAAUAAAAZAAEAAQABAAUAAAAZAAIAAQABAAUAAAAZAAMAAQABAAUAAAAZAAQAAQABAAUAAAAaAAEAAQABAAUAAAAaAAIAAQABAAUAAAAaAAMAAQABAAUAAAAaAAQAAQABAAUAAAAbAAEAAQABAAUAAAAbAAIAAQABAAUAAAAbAAMAAQABAAUAAAAbAAQAAQABAAUAAAAcAAEAAQABAAUAAAAcAAIAAQABAAUAAAAcAAMAAQABAAUAAAAcAAQAAQABAAUAAAAdAAEAAQABAAUAAAAdAAIAAQABAAUAAAAdAAMAAQABAAUAAAAdAAQAAQABAAUAAAAeAAEAAQABAAUAAAAeAAIAAQABAAUAAAAeAAMAAQABAAUAAAAeAAQAAQABAAUAAAAfAAEAAQABAAUAAAAfAAIAAQABAAUAAAAfAAMAAQABAAUAAAAfAAQAAQABAAUAAAAgAAEAAQABAAUAAAAgAAIAAQABAAUAAAAgAAMAAQABAAUAAAAgAAQAAQABAAUAAAAhAAEAAQABAAUAAAAhAAIAAQABAAUAAAAhAAMAAQABAAUAAAAhAAQAAQABAAUAAAAiAAEAAQABAAUAAAAiAAIAAQABAAUAAAAiAAMAAQABAAUAAAAiAAQAAQABAAUAAAAjAAEAAQABAAUAAAAjAAIAAQABAAUAAAAjAAMAAQABAAUAAAAjAAQAAQABAAUAAAAkAAEAAQABAAUAAAAkAAIAAQABAAUAAAAkAAMAAQABAAUAAAAkAAQAAQABAAUAAAAlAAAAAQABAAUAAAAmAAAAAQABAAUAAAAnAAAAAQABAAUAAAAlAAEAAQABAAUAAAAmAAEAAQABAAUAAAAnAAEAAQABAAUAAAAnAAIAAQABAAUAAAAnAAMAAQABAAUAAAAnAAQAAQABAAUAAAAmAAQAAQABAAUAAAAlAAQAAQABAAUAAAAlAAMAAQABAAUAAAAmAAMAAQABAAUAAAAmAAIAAQABAAUAAAAlAAIAAQABAAUAAAAoAAQAAQABAAUAAAAoAAMAAQABAAUAAAAoAAIAAQABAAUAAAAoAAEAAQABAAUAAAAQAAAAAQABAAUAAAARAAAAAQABAAUAAAASAAAAAQABAAUAAAATAAAAAQABAAUAAAAUAAAAAQABAAUAAAAVAAAAAQABAAUAAAAWAAAAAQABAAUAAAAXAAAAAQABAAUAAAAFAAAAAQABAAUAAAAGAAAAAQABAAUAAAAAAAEAAQABAAUAAAABAAEAAQABAAUAAAAJAAEAAQABAAUAAAAKAAEAAQABAAUAAAALAAEAAQABAAUAAAAMAAEAAQABAAUAAAANAAEAAQABAAUAAAAOAAEAAQABAAUAAAAPAAEAAQABAAUAAAAQAAEAAQABAAUAAAARAAEAAQABAAUAAAASAAEAAQABAAUAAAATAAEAAQABAAUAAAAUAAEAAQABAAUAAAAlAP//AQABAAQAAAAmAP//AQABAAQAAAAnAP//AQABAAQAAAAoAAAAAQABAAUAAAApAOL/AQABAAUAAAApAOP/AQABAAUAAAApAOT/AQABAAUAAAApAOX/AQABAAUAAAApAOb/AQABAAUAAAApAOf/AQABAAUAAAApAOj/AQABAAUAAAApAOn/AQABAAUAAAApAOr/AQABAAUAAAApAOv/AQABAAUAAAApAPX/AQABAAUAAAApAPb/AQABAAUAAAApAPf/AQABAAUAAAApAPj/AQABAAUAAAApAPn/AQABAAUAAAApAPr/AQABAAUAAAApAPv/AQABAAUAAAApAPz/AQABAAUAAAApAP3/AQABAAUAAAApAP7/AQABAAUAAAApAP//AQABAAUAAAApAAAAAQABAAUAAAApAAEAAQABAAUAAAApAAIAAQABAAUAAAApAAMAAQABAAUAAAApAAQAAQABAAUAAAAHAAAAAQABAAUAAAAHAAEAAQABAAUAAAAHAAIAAQABAAUAAAAHAAMAAQABAAUAAAAHAAQAAQABAAUAAAAIAAAAAQABAAUAAAAIAAEAAQABAAUAAAAIAAIAAQABAAUAAAAIAAMAAQABAAUAAAAIAAQAAQABAAUAAAD//+r/AQABAAUAAAD//+v/AQABAAUAAAD///X/AQABAAUAAAD///b/AQABAAUAAAD///f/AQABAAUAAAD///j/AQABAAUAAAD///n/AQABAAUAAAD///3/AQABAAUAAAD///7/AQABAAUAAAD/////AQABAAUAAAD///z/AQABAAUAAAD///v/AQABAAUAAAD///r/AQABAAUAAAD//wQAAQABAAUAAAD//wAAAQABAAUAAAD//wEAAQABAAUAAAD//wIAAQABAAUAAAD//wMAAQABAAUAAAAoAOr/AQABAAUAAAAoAOv/AQABAAUAAAAkAP//AQABAAQAAAAoAP//AQABAAUAAAD+/+r/AQABAAUAAAD+/+v/AQABAAUAAAD+/+z/AQABAAUAAAD+/+3/AQABAAUAAAD+/+7/AQABAAUAAAD+/+//AQABAAUAAAD+//D/AQABAAUAAAD+//H/AQABAAUAAAD+//L/AQABAAUAAAD+//P/AQABAAUAAAD+//T/AQABAAUAAAD+//X/AQABAAUAAAD+//b/AQABAAUAAAD+//f/AQABAAUAAAD+//j/AQABAAUAAAD+//n/AQABAAUAAAD+//r/AQABAAUAAAD+//v/AQABAAUAAAD+//z/AQABAAUAAAD+//3/AQABAAUAAAD+//7/AQABAAUAAAD+////AQABAAUAAAD+/wAAAQABAAUAAAD+/wEAAQABAAUAAAD+/wIAAQABAAUAAAD+/wMAAQABAAUAAAD+/wQAAQABAAUAAAACAAEAAQABAAUAAAACAAIAAQABAAUAAAACAAMAAQABAAUAAAADAAEAAQABAAUAAAADAAIAAQABAAUAAAADAAMAAQABAAUAAAAEAAEAAQABAAUAAAAEAAIAAQABAAUAAAAEAAMAAQABAAUAAAAFAAEAAQABAAUAAAAFAAIAAQABAAUAAAAFAAMAAQABAAUAAAAGAAEAAQABAAUAAAAGAAIAAQABAAUAAAAGAAMAAQABAAUAAAAAAP//AQABAAQAAAABAP//AQABAAQAAAACAP//AQABAAQAAAADAP//AQABAAQAAAD//+z/AQABAAUAAAD//+3/AQABAAUAAAD//+7/AQABAAUAAAD//+//AQABAAUAAAD///D/AQABAAUAAAD///H/AQABAAUAAAD///L/AQABAAUAAAD///P/AQABAAUAAAD///T/AQABAAUAAAApAOz/AQABAAUAAAApAO3/AQABAAUAAAApAO7/AQABAAUAAAApAO//AQABAAUAAAApAPD/AQABAAUAAAApAPH/AQABAAUAAAApAPL/AQABAAUAAAApAPP/AQABAAUAAAApAPT/AQABAAUAAAAEAP//AQABAAQAAAAFAP//AQABAAQAAAAGAP//AQABAAQAAAAHAP//AQABAAQAAAAIAP//AQABAAQAAAAJAP//AQABAAQAAAAKAP//AQABAAQAAAALAP//AQABAAQAAAAMAP//AQABAAQAAAANAP//AQABAAQAAAAOAP//AQABAAQAAAAPAP//AQABAAQAAAAQAP//AQABAAQAAAARAP//AQABAAQAAAASAP//AQABAAQAAAATAP//AQABAAQAAAAUAP//AQABAAQAAAAVAP//AQABAAQAAAAWAP//AQABAAQAAAAXAP//AQABAAQAAAAYAP//AQABAAQAAAAZAP//AQABAAQAAAAaAP//AQABAAQAAAAbAP//AQABAAQAAAAcAP//AQABAAQAAAAdAP//AQABAAQAAAAeAP//AQABAAQAAAAfAP//AQABAAQAAAAgAP//AQABAAQAAAAhAP//AQABAAQAAAAiAP//AQABAAQAAAAjAP//AQABAAQAAAAoAOz/AQAAAAUAAAAoAO3/AQAAAAUAAAAoAO7/AQAAAAUAAAAoAO//AQAAAAUAAAAoAPD/AQAAAAUAAAAoAPH/AQAAAAUAAAAoAPL/AQAAAAUAAAAoAPP/AQAAAAUAAAAoAPT/AQAAAAUAAAAoAPX/AQAAAAUAAAAoAPb/AQAAAAUAAAAoAPf/AQAAAAUAAAAoAPj/AQAAAAUAAAAoAPn/AQAAAAUAAAAoAPr/AQAAAAUAAAAoAPv/AQAAAAUAAAAoAPz/AQAAAAUAAAAoAP3/AQAAAAUAAAAoAP7/AQAAAAUAAAACAP7/AQADAAQAAAADAP7/AQADAAQAAAAVAP7/AQADAAQAAAAkAP7/AQADAAQAAAAlAP7/AQAEAAQAAAASAP7/AQAEAAQAAAAeAP7/AQAEAAQAAAABAP7/AQAEAAQAAAANAO//AQAGAAcAAAAaAO//AQAGAAcAAAAAANn/AQABAAUAAAAAANr/AQABAAUAAAAAANv/AQAIAAcAAAABANn/AQABAAUAAAABANr/AQABAAUAAAABANv/AQAIAAcAAAACANn/AQABAAUAAAACANr/AQABAAUAAAADANn/AQABAAUAAAADANr/AQABAAUAAAAEANn/AQABAAUAAAAEANr/AQABAAUAAAAFANn/AQABAAUAAAAFANr/AQABAAUAAAAGANn/AQABAAUAAAAGANr/AQABAAUAAAAGANv/AQAFAAQAAAAGANz/AQAFAAUAAAAGAN3/AQAFAAYAAAAHANn/AQABAAUAAAAHANr/AQABAAUAAAAIANn/AQABAAUAAAAIANr/AQABAAUAAAAIANv/AQAIAAcAAAAJANn/AQABAAUAAAAJANr/AQABAAUAAAAJANv/AQAIAAcAAAAKANn/AQABAAUAAAAKANr/AQABAAUAAAAKANv/AQAIAAcAAAALANn/AQABAAUAAAALANr/AQABAAUAAAALANv/AQAHAAcAAAAMANn/AQABAAUAAAAMANr/AQABAAUAAAAMANv/AQAHAAcAAAANANn/AQABAAUAAAANANr/AQABAAUAAAANANv/AQAGAAQAAAANANz/AQAGAAUAAAANAN3/AQAGAAYAAAAOANn/AQABAAUAAAAOANr/AQABAAUAAAAOANv/AQAIAAcAAAAPANn/AQABAAUAAAAPANr/AQABAAUAAAAPANv/AQAIAAcAAAAQANn/AQABAAUAAAAQANr/AQABAAUAAAAQANv/AQAIAAcAAAARANn/AQABAAUAAAARANr/AQABAAUAAAASANn/AQABAAUAAAASANr/AQABAAUAAAATANn/AQABAAUAAAATANr/AQABAAUAAAAUANn/AQABAAUAAAAUANr/AQABAAUAAAAUANv/AQAGAAQAAAAUANz/AQAGAAUAAAAVANn/AQABAAUAAAAVANr/AQABAAUAAAAVANv/AQAIAAcAAAAWANn/AQABAAUAAAAWANr/AQABAAUAAAAWANv/AQAIAAcAAAAXANn/AQABAAUAAAAXANr/AQABAAUAAAAXANv/AQAIAAcAAAAYANn/AQABAAUAAAAYANr/AQABAAUAAAAZANn/AQABAAUAAAAZANr/AQABAAUAAAAaANn/AQABAAUAAAAaANr/AQABAAUAAAAaANv/AQAGAAQAAAAaANz/AQAGAAUAAAAaAN3/AQAGAAYAAAAbANn/AQABAAUAAAAbANr/AQABAAUAAAAbANv/AQAIAAcAAAAcANn/AQABAAUAAAAcANr/AQABAAUAAAAcANv/AQAIAAcAAAAdANn/AQABAAUAAAAdANr/AQABAAUAAAAeANn/AQABAAUAAAAeANr/AQABAAUAAAAeANv/AQAGAAQAAAAfANn/AQABAAUAAAAfANr/AQABAAUAAAAgANn/AQABAAUAAAAgANr/AQABAAUAAAAgANv/AQAHAAcAAAAhANn/AQABAAUAAAAhANr/AQABAAUAAAAiANn/AQABAAUAAAAiANr/AQABAAUAAAAiANv/AQAHAAQAAAAiANz/AQAHAAUAAAAiAN3/AQAHAAUAAAAjANn/AQABAAUAAAAjANr/AQABAAUAAAAjANv/AQAIAAcAAAAkANn/AQABAAUAAAAkANr/AQABAAUAAAAkANv/AQAIAAcAAAAlANn/AQABAAUAAAAlANr/AQABAAUAAAAlANv/AQAIAAcAAAAmANn/AQABAAUAAAAmANr/AQABAAUAAAAmANv/AQAIAAcAAAAnANn/AQABAAUAAAAnANr/AQABAAUAAAAnANv/AQAIAAcAAAD+/9n/AQABAAUAAAD+/9r/AQABAAUAAAD+/9v/AQABAAUAAAD+/9z/AQABAAUAAAD+/93/AQABAAUAAAD+/97/AQABAAUAAAD+/9//AQABAAUAAAD+/+D/AQABAAUAAAD+/+H/AQABAAUAAAD+/+L/AQABAAUAAAD+/+P/AQABAAUAAAD+/+T/AQABAAUAAAD+/+X/AQABAAUAAAD+/+b/AQABAAUAAAD+/+f/AQABAAUAAAD+/+j/AQABAAUAAAD+/+n/AQABAAUAAAD//9n/AQABAAUAAAD//9r/AQABAAUAAAD//9v/AQABAAUAAAD//9z/AQABAAUAAAD//93/AQABAAUAAAD//97/AQABAAUAAAD//9//AQABAAUAAAD//+D/AQABAAUAAAD//+H/AQABAAUAAAD//+L/AQABAAUAAAD//+P/AQABAAUAAAD//+T/AQABAAUAAAD//+X/AQABAAUAAAD//+b/AQABAAUAAAD//+f/AQABAAUAAAD//+j/AQABAAUAAAD//+n/AQABAAUAAAAoANn/AQABAAUAAAAoANr/AQABAAUAAAAoANv/AQABAAUAAAAoANz/AQABAAUAAAAoAN3/AQABAAUAAAAoAN7/AQABAAUAAAAoAN//AQABAAUAAAAoAOD/AQABAAUAAAAoAOH/AQABAAUAAAAoAOL/AQABAAUAAAAoAOP/AQABAAUAAAAoAOT/AQABAAUAAAAoAOX/AQABAAUAAAAoAOb/AQABAAUAAAAoAOf/AQABAAUAAAAoAOj/AQABAAUAAAApANn/AQABAAUAAAApANr/AQABAAUAAAApANv/AQABAAUAAAApANz/AQABAAUAAAApAN3/AQABAAUAAAApAN7/AQABAAUAAAApAN//AQABAAUAAAApAOD/AQABAAUAAAApAOH/AQABAAUAAAAoAOn/AQABAAUAAAAaAN7/AQAGAAUAAAAaAN//AQAGAAUAAAAaAOD/AQAGAAUAAAAaAOH/AQAGAAUAAAAaAOL/AQAGAAUAAAAaAOP/AQAGAAUAAAAaAOT/AQAGAAUAAAAaAOX/AQAGAAUAAAAaAOb/AQAGAAUAAAAaAOf/AQAGAAUAAAAaAOj/AQAGAAUAAAAaAOn/AQAGAAUAAAAaAOr/AQAGAAUAAAAaAOv/AQAGAAUAAAAaAOz/AQAGAAUAAAAaAO3/AQAGAAUAAAAaAO7/AQAGAAUAAAANAN7/AQAGAAUAAAANAN//AQAGAAUAAAANAOD/AQAGAAUAAAANAOH/AQAGAAUAAAANAOL/AQAGAAUAAAANAOP/AQAGAAUAAAANAOT/AQAGAAUAAAANAOX/AQAGAAUAAAANAOb/AQAGAAUAAAANAOf/AQAGAAUAAAANAOj/AQAGAAUAAAANAOn/AQAGAAUAAAANAOr/AQAGAAUAAAANAOv/AQAGAAUAAAANAOz/AQAGAAUAAAANAO3/AQAGAAUAAAANAO7/AQAGAAUAAAAUAN3/AQAGAAUAAAAUAN7/AQAGAAUAAAAUAN//AQAGAAUAAAAUAOD/AQAGAAUAAAAUAOH/AQAGAAUAAAAUAOL/AQAGAAUAAAAUAOP/AQAGAAUAAAAUAOT/AQAGAAUAAAAUAOX/AQAGAAUAAAAUAOb/AQAGAAUAAAAUAOf/AQAGAAUAAAAUAOj/AQAGAAUAAAAUAOn/AQAGAAUAAAAUAOr/AQAGAAUAAAAUAOv/AQAGAAUAAAAUAOz/AQAGAAUAAAAUAO3/AQAGAAUAAAAUAO7/AQAGAAYAAAAUAO//AQAGAAYAAAAUAPD/AQAGAAYAAAAUAPH/AQAGAAUAAAAUAPL/AQAGAAUAAAAUAPP/AQAGAAYAAAAUAPT/AQAGAAcAAAAGAN7/AQAFAAUAAAAGAN//AQAFAAUAAAAGAOD/AQAFAAUAAAAGAOH/AQAFAAUAAAAGAOL/AQAFAAUAAAAGAOP/AQAFAAUAAAAGAOT/AQAFAAUAAAAGAOX/AQAFAAUAAAAGAOb/AQAFAAUAAAAGAOf/AQAFAAUAAAAGAOj/AQAFAAUAAAAGAOn/AQAFAAUAAAAGAOr/AQAFAAUAAAAGAOv/AQAFAAUAAAAGAOz/AQAFAAUAAAAGAO3/AQAFAAUAAAAGAO7/AQAFAAUAAAAGAO//AQAFAAYAAAAGAPD/AQAFAAYAAAAGAPH/AQAFAAcAAAAiAN7/AQAHAAUAAAAiAN//AQAHAAUAAAAiAOD/AQAHAAUAAAAiAOH/AQAHAAUAAAAiAOL/AQAHAAUAAAAiAOP/AQAHAAUAAAAiAOT/AQAHAAUAAAAiAOX/AQAHAAUAAAAiAOb/AQAHAAUAAAAiAOf/AQAHAAUAAAAiAOj/AQAHAAUAAAAiAOn/AQAHAAUAAAAiAOr/AQAHAAUAAAAiAOv/AQAHAAUAAAAiAOz/AQAHAAUAAAAiAO3/AQAHAAUAAAAiAO7/AQAHAAUAAAAiAO//AQAHAAYAAAAeANz/AQAGAAQAAAAeAN3/AQAGAAUAAAAeAN7/AQAGAAQAAAAeAN//AQAGAAUAAAAeAOD/AQAGAAQAAAAeAOH/AQAGAAUAAAAeAOL/AQAGAAQAAAAeAOP/AQAGAAUAAAAeAOT/AQAGAAQAAAAeAOX/AQAGAAUAAAAeAOb/AQAGAAQAAAAeAOf/AQAGAAUAAAAeAOj/AQAGAAQAAAAeAOn/AQAGAAUAAAAeAOr/AQAGAAQAAAAeAOv/AQAGAAUAAAAeAOz/AQAGAAQAAAAeAO3/AQAGAAUAAAAeAO7/AQAGAAQAAAAeAO//AQAGAAUAAAAeAPD/AQAGAAQAAAAeAPH/AQAGAAUAAAAeAPL/AQAGAAcAAAA=")
tile_set = SubResource("TileSet_pm251")

[node name="Boss" type="CharacterBody2D" parent="."]
position = Vector2(574, -41)
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 3
script = ExtResource("4_pm251")
shuriken_scene = ExtResource("5_ageof")

[node name="Sprite2D" type="Sprite2D" parent="Boss"]
scale = Vector2(4, 4)
texture = ExtResource("6_ageof")

[node name="Hitbox" type="Area2D" parent="Boss"]
collision_layer = 4
script = ExtResource("8_s35pp")

[node name="Player Hitbox" type="CollisionShape2D" parent="Boss/Hitbox"]
position = Vector2(0.375, 0)
shape = SubResource("RectangleShape2D_mu778")

[node name="Floor Hitbox" type="CollisionShape2D" parent="Boss"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_uuuni")

[node name="AttackTimer" type="Timer" parent="Boss"]

[node name="HPBar" type="ProgressBar" parent="Boss"]
offset_left = -42.0
offset_top = -52.0
offset_right = 42.0
offset_bottom = -32.0
scale = Vector2(1, 0.6)
theme_override_fonts/font = ExtResource("10_s35pp")
theme_override_styles/background = SubResource("StyleBoxFlat_s35pp")
theme_override_styles/fill = SubResource("StyleBoxFlat_mu778")
show_percentage = false
script = ExtResource("11_mu778")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 16.0
offset_right = 624.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 124.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("10_s35pp")
text = "testing dialogue"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 511.0
offset_top = 21.0
offset_right = 619.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("10_s35pp")
text = "(Click to skip)"

[connection signal="body_entered" from="Exit" to="Exit" method="_on_body_entered"]
